<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="add_track_person">Add GeoPing Person</string>
    <string name="add_pairing">Add GeoPing pairing</string>
    <string name="geoping">GeoPing</string>
    <string name="menu_select_contact">Contacts</string>
    <string name="menu_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="refresh">Refresh</string>
    <string name="menu_share_app">Share GeoPing</string>
    <string name="share_app_subject">Let me recommend you GeoPing application</string>
    <string name="app_comment_title">Rate and Comment</string>
    <string name="app_comment_summary">Thank for yours comments</string>
    <string name="notif_click_to_accept">(Click to accept)</string>
    <string name="notif_geoping">GeoPing</string>
    <string name="notif_geoping_response">I am here</string>
    <string name="notif_geoping_request">Where are you ?</string>
    <string name="notif_pairing">Click to accept GeoPing pairing</string>
    <string name="notif_pairing_always">Always</string>
    <string name="notif_pairing_never">Blocked</string>
    <string name="notif_confirm_request_eachtime">On demand</string>
    <string name="toast_notif_sended_geoping_smsError">Error during the sending of message to %s</string>
    <string name="toast_notif_sended_geoping_pairing">GeoPing pairing request sent : %s</string>
    <string name="toast_notif_sended_geoping_request">Where are you ?: %s</string>
    <string name="toast_notif_sended_geoping_response">I am here: %s</string>
    <string name="toast_notif_backup_restored">Backup restored</string>
    <string name="notif_geoping_request_blocked">GeoPing blocked</string>
    <string name="notif_actionMessage_blocked">%s blocked</string>
    <string name="widget_geoping_person_title">Where are you ?</string>
    <string name="widget_geoping_pairing_title">I am here</string>
    <string name="sms_action_geoping_request">GeoPing request</string>
    <string name="sms_action_geoping_response">GeoPing answer</string>
    <string name="sms_action_geoping_declaration">GeoPing declaration</string>
    <string name="sms_action_geofence_transition_unknown">Offense Geo Fence</string>
    <string name="sms_action_geofence_transition_enter">Entered Geo Fence</string>
    <string name="sms_action_geofence_transition_exit">Exited Geo Fence</string>
    <string name="sms_action_geofence_transition_enter_with_name">Entered : %s</string>
    <string name="sms_action_geofence_transition_exit_with_name">Exited : %s</string>
    <string name="sms_action_pairing_request">Pairing request</string>
    <string name="sms_action_pairing_response">Pairing answer</string>
    <string name="sms_action_spyevt_shutdown">Event Shutdown</string>
    <string name="sms_action_spyevt_boot">Event Boot</string>
    <string name="sms_action_spyevt_low_battery">Event Low Battery</string>
    <string name="sms_action_spyevt_phone_call">Event Phone Call</string>
    <string name="sms_action_spyevt_sim_change">Event Sim Change</string>
    <string name="sms_action_command_openApp">Open Application</string>
    <string name="sms_action_command_ring">Ring</string>
    <string name="menu_map_mypositioncenter">My position</string>
    <string name="map_mode">Map Type</string>
    <string name="menu_geoping">GeoPing</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_emergency_mode">Emergency Mode</string>
    <string name="menu_map">Map</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_person">Where are you?</string>
    <string name="menu_person_remote_control">Remote control</string>
    <string name="menu_person_remote_control_summary">"On the remote phone"</string>
    <string name="menu_pairing">Who follows me!</string>
    <string name="menu_geofence">GeoFence</string>
    <string name="menu_smslog">Log Sms</string>
    <string name="menu_extra_feature">Extra Features</string>
    <string name="menu_pairing_notification">Notification</string>
    <string name="menu_map_geofences_show">Geofences</string>
    <string name="menu_map_geofences_hide">Hide Geofences</string>
    <string name="menu_map_geofence_add">Add Geofence</string>
    <string name="person_geoping_pairing_action">Pairing</string>
    <string name="menu_map_mypositon_hide">Hide my position</string>
    <string name="menu_map_mypositon_show">Show my position</string>
    <string name="menu_map_track_timeline">Time Line</string>
    <string name="menu_map_minimap">MiniMap</string>
    <string name="prefs_sms_category">Monitoring Sms</string>
    <string name="prefs_pairing_security">Security pairing</string>
    <string name="prefs_pairing_security_block_request">Pairing</string>
    <string name="prefs_pairing_security_block_request_summaryOff">Block new GeoPing pairing</string>
    <string name="prefs_pairing_security_block_request_summaryOn">Authorize new GeoPing pairing</string>
    <string name="prefs_sms_resend">Sms Message acknowledge</string>
    <string name="prefs_sms_resend_on_error">Re Send Sms</string>
    <string name="prefs_sms_resend_on_error_summary">On error the Sms will be send again</string>
    <string name="prefs_notification_category">Notification</string>
    <string name="prefs_notification_sound">Notification Sound</string>
    <string name="prefs_notification_sound_dialog_title">Change Sound</string>
    <string name="prefs_geoping_request">GeoLoc Request</string>
    <string name="prefs_show_geoping_notification">Show a notification</string>
    <string name="prefs_show_geoping_notification_summary">For new pairing</string>
    <string name="prefs_geoping_request_timeout_ms">Request Time Out in s</string>
    <string name="prefs_geoping_request_accuracy_expected_m">Request expected accuracy in m</string>
    <string name="prefs_geoping_localSave">Save in a local database</string>
    <string name="prefs_geoping_localSave_summaryOn">Keep a record in a local DB</string>
    <string name="prefs_geoping_localSave_summaryOff">Desactivated</string>
    <string name="prefs_myLocation">My position</string>
    <string name="prefs_myLocation_display_LatLng">Show the coordinates</string>
    <string name="prefs_emergency_category">Emergency Mode</string>
    <string name="prefs_emergency_password">Emergency Password</string>
    <string name="prefs_emergency_description">The Emergency Mode permit to send GeoPing, without previous association, thank to the password recorded in the Settings</string>
    <string name="prefs_geoping_map_category">Map Display</string>
    <string name="prefs_geoPoint_geocoding_auto">Automatic Geocoding</string>
    <string name="prefs_developement">Development</string>
    <string name="prefs_sms_delete_onMessage">Deleting SMS</string>
    <string name="prefs_sms_delete_onMessage_summaryOn">SMS GeoPing are invisible</string>
    <string name="prefs_sms_delete_onMessage_summaryOff">SMS GeoPing are saved</string>
    <string name="prefs_monitor">Monitor</string>
    <string name="prefs_service_monitor">Service Monitor</string>
    <string name="prefs_info">Information</string>
    <string name="prefs_version">Version</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_licence">Licence</string>
    <string name="prefs_about">Credit</string>
    <string name="prefs_release_notes">What \'\s up ?</string>
    <string name="prefs_count_laught">Counter of launching</string>
    <string name="prefs_count_laught_summary">Number of launching the application</string>
    <string name="prefs_lockapp">Lock Application</string>
    <string name="prefs_lockapp_lockpattern_create">Lock By Pattern</string>
    <string name="prefs_lockapp_lockpattern_max_retry">Maximum retry</string>
    <string name="prefs_lockapp_lockpattern_min_wired_dots">Minimum wired dots</string>
    <string name="prefs_launcher_icon">Launcher Icon</string>
    <string name="prefs_launcher_icon_summary_on">Launcher Icon is show</string>
    <string name="prefs_launcher_icon_summary_off">Launcher Icon is hide</string>
    <string name="prefs_launcher_icon_error_missing_pairing_command_authorize">A person should be authorize to accept SMS command</string>
    <string name="prefs_widget_category">Widget Feature</string>
    <string name="prefs_widget_summary_on">The Widget is visible</string>
    <string name="prefs_widget_summary_off">The Widget is hide</string>
    <string name="prefs_widget_person_list">Person Widget Icon</string>
    <string name="prefs_widget_pairing_list">Pairing Widget Icon</string>
    <string name="kg_too_many_failed_attempts_countdown_seconds">Try again in <xliff:g id="seconds">%d</xliff:g> seconds.</string>
    <string name="kg_too_many_failed_attempts_countdown_minutes">Try again in <xliff:g id="minutes">%1$d min %2$d s.</xliff:g></string>
    <string name="kg_too_many_failed_attempts_countdown_hours">Try again in <xliff:g id="hours">%1$d h %2$d min %3$d s.</xliff:g></string>
    <string name="show_dev_countdown">You are now <xliff:g id="step_count">%1$d</xliff:g> steps away from enabling development settings.</string>
    <string name="show_dev_on">You have enabled development settings!</string>
    <string name="show_dev_already">No need, you have already enabled development settings.</string>
    <string name="prefs_spynotif_title">Spy Notification</string>
    <string name="prefs_spynotif_shutdown_sleep_in_ms">Shutdown Sleep In Ms</string>
    <string name="prefs_spynotif_changed_phonenumber">SIM Phone Number</string>
    <string name="prefs_add_blocked">Add Blocked</string>
    <string name="legal_information">Legal information</string>
    <string name="prefs_license_activity_title">Open source licenses</string>
    <string name="color_picker">Pick a color</string>
    <string name="geotrack_time_dateformat">%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS</string>
    <string name="battery_percent">Battery %s%%</string>
    <string name="accuracy_precision_in_meter">+/- %sm</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="accuracy_separator">+/-</string>
    <string name="altitude">Altitude</string>
    <string name="app_version_update_necessary">Update Remote Application Necessary</string>
    <string name="person_name">Name</string>
    <string name="person_phone">Phone number</string>
    <string name="description_contact_photo">Picture of the contact</string>
    <string name="pairing_name">Name</string>
    <string name="pairing_phone">Phone number</string>
    <string name="pairing_show_notification">Show notification</string>
    <string name="pairing_geofence_notification">Geofence notification</string>
    <string name="pairing_authorize_type">GeoPing authorization</string>
    <string name="pairing_authorize_type_never">Blocked</string>
    <string name="pairing_authorize_type_ask">On validation</string>
    <string name="pairing_authorize_type_always">Always</string>
    <string name="pairing_notification_shutdown">Allumage/Extinction du téléphone</string>
    <string name="pairing_notification_battery_low">Batterie faible</string>
    <string name="pairing_notification_sim_change">Changement de carte SIM</string>
    <string name="pairing_notification_phone_call">Appel Téléphonique Emis</string>
    <string name="pairing_notification_phone_receive">Appel Téléphonique Recut</string>
    <string name="geofence_name">Geofence Name</string>
    <string name="geofence_transition">Transition Type</string>
    <string name="geofence_transition_enter">Entered Geo Fence</string>
    <string name="geofence_transition_exit">Exited Geo Fence</string>
    <string name="geofence_alarm">Alarm</string>
    <string name="edit_geofence">Edit a GeoFence</string>
</resources>