<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_pairing">

    <PreferenceCategory android:title="@string/prefs_notification_category">
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dialogTitle="@string/prefs_notification_sound_dialog_title"
            android:key="@string/pkey_pairing_notif_sound"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:title="@string/prefs_notification_sound"
            android:widgetLayout="@layout/prefs_widget_more"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_pairing_security">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="authorizeNewGeopingPairing"
            android:summaryOff="@string/prefs_pairing_security_block_request_summaryOff"
            android:summaryOn="@string/prefs_pairing_security_block_request_summaryOn"
            android:title="@string/prefs_pairing_security_block_request" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pkey_shownotif_newparing_default"
            android:summary="@string/prefs_show_geoping_notification_summary"
            android:title="@string/prefs_show_geoping_notification" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_sms_resend">
        <eu.ttbox.geoping.ui.prefs.sms.SmsMessageReSendCheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pkey_sms_resend"
            android:title="@string/prefs_sms_resend_on_error"
            android:summary="@string/prefs_sms_resend_on_error_summary"/>

    </PreferenceCategory>


</PreferenceScreen>