<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:geoping="http://schemas.android.com/apk/res-auto">

      <item
        android:id="@+id/menu_cancel"
        android:icon="@drawable/ic_menu_nav_cancel"
        geoping:showAsAction="ifRoom|withText"
        android:title="@string/menu_cancel"/>
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_nav_accept"
        geoping:showAsAction="ifRoom|withText"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_select_contact"
        android:icon="@drawable/ic_action_user"
        geoping:showAsAction="ifRoom|withText"
        android:title="@string/menu_select_contact"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_action_discard"
        geoping:showAsAction="ifRoom|withText"
        android:title="@string/menu_delete"/>

</menu>