<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="ifContentScrolls"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <EditText
            android:id="@+id/pairing_name"
            style="@style/entity_edit"
            android:layout_width="fill_parent"
            android:hint="@string/pairing_name"
            android:inputType="textPersonName" />

        <include
            android:id="@+id/pairing_photo_imageView"
            layout="@layout/item_photo_editor"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="26dp"
            android:maxHeight="80dp"
            android:maxWidth="80dp" />



        <ImageButton
            android:id="@+id/select_contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pairing_name"
            android:layout_toLeftOf="@id/pairing_photo_imageView"
            android:contentDescription="@string/menu_select_contact"
            android:src="@drawable/ic_action_user" />

        <EditText
            android:id="@+id/pairing_phone"
            style="@style/entity_edit"
            android:layout_width="wrap_content"
            android:layout_alignStart="@id/pairing_name"
            android:layout_below="@id/pairing_name"
            android:layout_toLeftOf="@id/select_contact_button"
            android:hint="@string/pairing_phone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/pairing_authorize_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pairing_phone"
            android:layout_marginTop="20dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:text="@string/pairing_authorize_type" />

        <RadioGroup
            android:id="@+id/pairing_authorize_type_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pairing_authorize_type"
            android:layout_marginTop="10dp"
            android:text="@string/pairing_authorize_type">

            <RadioButton
                android:id="@+id/pairing_authorize_type_radio_never"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pairing_authorize_type_never" />

            <RadioButton
                android:id="@+id/pairing_authorize_type_radio_ask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pairing_authorize_type_ask" />

            <RadioButton
                android:id="@+id/pairing_authorize_type_radio_always"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pairing_authorize_type_always" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/paring_show_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pairing_authorize_type_radioGroup"
            android:layout_marginTop="21dp"
            android:text="@string/pairing_show_notification" />


        <include
            android:id="@+id/select_notification_sound"
            android:layout_below="@id/paring_show_notification"
            android:layout_alignStart="@id/paring_show_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/comp_select_notification_sound" />

    </RelativeLayout>

</ScrollView>