<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="ifContentScrolls"
            android:scrollbars="none">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <EditText
            android:id="@+id/person_name"
            style="@style/entity_edit"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true" 
            android:layout_alignRight="@id/person_phone"
            android:hint="@string/person_name"
            android:inputType="textPersonName" />

      
        <include
            android:id="@+id/person_photo_imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="26dp"
            layout="@layout/item_photo_editor"
              
            android:maxHeight="80dp"
            android:maxWidth="80dp" />

        <EditText
            android:id="@+id/person_phone"
            style="@style/entity_edit"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/person_name"
            android:layout_toLeftOf="@id/person_photo_imageView"
            android:hint="@string/person_phone"
            android:inputType="phone" />

        <ImageButton
            android:id="@+id/select_contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/person_phone"
            android:layout_toRightOf="@id/person_phone"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_action_user"
            android:contentDescription="@string/menu_select_contact"
            android:textAppearance="?android:attr/textAppearanceMedium" />



        <Button
            android:id="@+id/person_color_picker_button"
            style="@style/entity_edit"
            android:layout_below="@id/select_contact_button"
            android:text="@string/color_picker" />

        <Button
            android:id="@+id/person_pairing_button"
            style="@style/entity_edit"
            android:layout_below="@id/person_color_picker_button"
            android:text="@string/person_geoping_pairing_action"
            android:visibility="gone" />

        <TextView
            android:visibility="gone"
            android:id="@+id/labelUpdateAppVersion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/notify_background_color"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:text="Update Remote Application Necessary"
            />


    </RelativeLayout>

</ScrollView>